xfce: made more stuff optional and added a taskbar query

--- a/windowmanagers/xfce/HISTORY
+++ b/windowmanagers/xfce/HISTORY
@@ -1,3 +1,9 @@
+2008-01-06 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: removed gcc34 dep
+	* DEPENDS: made more deps optional, added audiofile arts and libxml2
+	           as optional deps
+	* CONFIGURE: optionally enable taskbar
+
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Works with any provider of LIBGIF
 	  Add xorg-modular checks
