cegui: Work with lua >= 5.0 (we have 5.1.2)

--- a/graphics-libs/cegui/HISTORY
+++ b/graphics-libs/cegui/HISTORY
@@ -1,5 +1,6 @@
 2008-01-06 Eric Sandall <sandalle@sourcemage.org>
 	* SUB_DEPENDS, PRE_SUB_DEPENDS: Allow forcing of lua (for ember)
+	* PRE_BUILD: Work with lua > 5.0 as well
 
 2007-04-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: version update
