--- a/graphics-libs/cegui/HISTORY
+++ b/graphics-libs/cegui/HISTORY
@@ -2,6 +2,7 @@
 	* SUB_DEPENDS, PRE_SUB_DEPENDS: Allow forcing of lua (for ember)
 	* SUB_DEPENDS, DEPENDS: Enable tolua++cegui module as well
 	* PRE_BUILD: Work with lua > 5.0 as well
+	* DEPENDS: Depends on g++
 
 2007-04-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: version update
