--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,7 @@
+2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
+	* FINAL: mv => cp, better verbose + some info
+	* BUILD: cleaned up
+
 2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
 	* FINAL: check for the src dir before, not the dest one
 
