--- a/devel/python/INSTALL
+++ b/devel/python/INSTALL
@@ -1,13 +1,13 @@
 persistent_add PYPATH &&
 local PYPATH=$INSTALL_ROOT/usr/lib/python${VERSION:0:3}
 
-if [ -d $PYPATH/site-packages ]; then
+if [[ -d $PYPATH/site-packages ]]; then
   mv $PYPATH/site-packages $SOURCE_DIRECTORY
 fi &&
 
 default_install &&
 
-if [ -f $SOURCE_DIRECTORY/spell-tmp/pydcop.py ]; then
+if [[ -f $SOURCE_DIRECTORY/spell-tmp/pydcop.py ]]; then
   mv $SOURCE_DIRECTORY/spell-tmp/pydcop.py $PYPATH
 fi &&
 
