utils/exmap: memory analysis tool that accurately determines memory use

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-07 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* utils/exmap: memory analysis tool that accurately determines memory use
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* FUNCTIONS: added default function for building the perlish spells
 	* perl-cpan/FUNCTIONS: use this function from root
