--- a/libs/soprano/HISTORY
+++ b/libs/soprano/HISTORY
@@ -1,3 +1,6 @@
+2008-01-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.0
+
 2008-01-06 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* PRE_BUILD, jniwrapper-qatomic.patch: apply patch for a bad/missing include
 
