--- a/disk/ddrescue/HISTORY
+++ b/disk/ddrescue/HISTORY
@@ -1,3 +1,6 @@
+2008-01-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7
+
 2007-11-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.6
 	* DEPENDS: added
