--- a/kde4/kdelibs4/HISTORY
+++ b/kde4/kdelibs4/HISTORY
@@ -1,3 +1,6 @@
+2008-01-07 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_BUILD, qt44.patch: added patch from r745967 so it compiles with qt4.4
+
 2008-01-06 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: force a recompile of soprano if it is too old
 
