--- a/perl-cpan/dailystrips/HISTORY
+++ b/perl-cpan/dailystrips/HISTORY
@@ -1,5 +1,7 @@
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: cleaned up
+	* DETAILS: removed UPDATED&&BUILD_API
+	* INSTALL: api(1 => 2)
 
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed MAINTAINER.
