perl-libnet: some cleanup + fixed url

--- a/perl-cpan/perl-libnet/HISTORY
+++ b/perl-cpan/perl-libnet/HISTORY
@@ -1,5 +1,5 @@
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
-	* DETAILS: cleaned up, updated to 1.22
+	* DETAILS: cleaned up, updated to 1.22, fixed url
 
 2007-03-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.20
