libnet-perl: deprecated (dupe of updated perl-netlib)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,7 @@
-2008-01-07 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
-	* utils/exmap: memory analysis tool that accurately determines memory use
-
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* FUNCTIONS: added default function for building the perlish spells
 	* perl-cpan/FUNCTIONS: use this function from root
+	* perl-cpan/libnet-perl: deprecated (dupe of updated perl-netlib)
 
 2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
 	* perl-cpan/MAINTAINER: add myself as maintainer
