--- a/perl-cpan/uri/HISTORY
+++ b/perl-cpan/uri/HISTORY
@@ -1,5 +1,5 @@
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
-	* DETAILS: removed UPDATED
+	* DETAILS: removed UPDATED, fixed url, cleaned up
 	* BUILD: useless
 
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
