mdnsresponder: new spell, bonjour's dns resolver

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-07 Arjan Bouter <abouter@sourcemage.org>
+	* net/mdnsresponder: new spell, bonjour's dns resolver
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* FUNCTIONS: added default function for building the perlish spells
 	* perl-cpan/FUNCTIONS: use this function from root
