libgcrypt: Forgot to bump PATCHLEVEL.

--- a/crypto/libgcrypt/HISTORY
+++ b/crypto/libgcrypt/HISTORY
@@ -3,6 +3,7 @@
 	  if libgcrypt is built with any -O optimization gnupg-exp will
 	  segfault. This happens at least with libgcrypt 1.4.0 on an Intel
 	  Core2 Duo running in 32-bit mode.
+	* DETAILS: Added PATCHLEVEL=1.
 
 2007-12-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.0
