yafray: added opt openexr support -- fixed bug #14201

--- a/graphics/yafray/HISTORY
+++ b/graphics/yafray/HISTORY
@@ -1,4 +1,7 @@
 2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added openexr+ilmbase as opt (#14201)
+
+2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* DEPENDS: cleaned up
 	* BUILD: fixed etc dir
