--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2008-01-07 Arjan Bouter <abouter@sourcemage.org>
 	* net/mdnsresponder: new spell, bonjour's dns resolver
 
+2008-01-07 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* utils/exmap: memory analysis tool that accurately determines memory us
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* FUNCTIONS: added default function for building the perlish spells
 	* perl-cpan/FUNCTIONS: use this function from root
