digest-md5: push back UPDATED

--- a/perl-cpan/digest-md5/HISTORY
+++ b/perl-cpan/digest-md5/HISTORY
@@ -1,5 +1,5 @@
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
-	* DETAILS: cleaned up, removed UPDATED
+	* DETAILS: cleaned up
 	* BUILD: useless
 
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
