www-gmail: spell deprecated, sources are dead

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-08 Vlad Glagolev <stealth@sourcemage.org>
+	* perl-cpan/www-gmail: spell deprecated, sources are dead
+
 2008-01-07 Arjan Bouter <abouter@sourcemage.org>
 	* net/mdnsresponder: new spell, bonjour's dns resolver
 
