--- a/database/postgresql/HISTORY
+++ b/database/postgresql/HISTORY
@@ -1,5 +1,5 @@
 2008-01-07 Ladislav Hagara <hgr@vabo.cz>
-	* DETAILS: 8.2.6
+	* DETAILS: 8.2.6, SECURITY_PATCH=5
 
 2007-09-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 8.2.5
