utils/nut: use --with-group since --with-user was specified in $OPTS

--- a/utils/nut/HISTORY
+++ b/utils/nut/HISTORY
@@ -1,3 +1,6 @@
+2008-01-07 Elisamuel Resto <ryuji@sourcemage.org>
+	* BUILD: must specify --with-group if --with-user is used in $OPTS
+
 2007-12-20 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* 204DDF1B.gpg: added gpg keyring
 	* DETAILS: Fixed SOURCE_URL[0]
