net-ssleay: *sigh*

--- a/perl-cpan/net-ssleay/HISTORY
+++ b/perl-cpan/net-ssleay/HISTORY
@@ -1,3 +1,7 @@
+2008-01-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: cleaned up, fixed url
+	* BUILD: fixed the build
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: cleaned up
 
