--- a/crypto/seahorse/HISTORY
+++ b/crypto/seahorse/HISTORY
@@ -1,3 +1,6 @@
+2008-01-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.20.3 (stable)
+
 2007-12-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.21.4 (devel)
 
