--- a/utils/sudo/HISTORY
+++ b/utils/sudo/HISTORY
@@ -1,3 +1,6 @@
+2008-01-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.6.9p11
+
 2007-12-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6.9p10
 
