FUNCTIONS: `nitpick' for default_build_perl function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-09 Vlad Glagolev <stealth@sourcemage.org>
+	* FUNCTIONS: `nitpick' for default_build_perl function
+
 2008-01-08 Vlad Glagolev <stealth@sourcemage.org>
 	* perl-cpan/www-gmail: spell deprecated, sources are dead
 
