--- a/audio-players/dermixd/HISTORY
+++ b/audio-players/dermixd/HISTORY
@@ -1,3 +1,7 @@
+2008-01-09 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS, DEPENDS, BUILD: updated to 1.3.0 (added libvorbis dep)
+	* dermixd-*.sig: removed, using upstream file
+
 2007-06-05 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS, dermixd-1.{2.0,1.[01]}.tar.bz2.sig: version bump to 1.2.0
 	* DEPENDS, BUILD: support the new optional dependency on libsndfile
