--- a/telephony/asterisk/HISTORY
+++ b/telephony/asterisk/HISTORY
@@ -1,3 +1,7 @@
+2008-01-09 Martin Spitzbarth <m.spitzbarth@gmx.de>
+	* DETAILS: updated spell to 1.4.17
+	  SECURITY_PATCH++
+
 2007-11-18 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* DETAILS: updated spell to 1.4.14
 
