--- a/windowmanagers/openbox/HISTORY
+++ b/windowmanagers/openbox/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11 Martin Spitzbarth <m.spitzbarth@gmx.de>
+	* DETAILS: updated spell to 3.4.5
+
 2007-08-09 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* DETAILS: updated spell to 3.4.4
 
