--- a/wm-addons/twin/HISTORY
+++ b/wm-addons/twin/HISTORY
@@ -1,3 +1,9 @@
+2008-01-09 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version 0.6.0, removed gcc34 dep,
+	           removed UPDATED, re-enabled
+	           distcc and ccache
+	* DEPENDS: removed gcc34 dep
+
 2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
 	* DETAILS: (automated) Add KEYWORDS
 
