--- a/wm-addons/twin/HISTORY
+++ b/wm-addons/twin/HISTORY
@@ -1,7 +1,6 @@
 2008-01-09 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 0.6.0, removed gcc34 dep,
-	           removed UPDATED, re-enabled
-	           distcc and ccache
+	           removed UPDATED, fixes #11479
 	* DEPENDS: removed gcc34 dep
 
 2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
