--- a/kde4/HISTORY
+++ b/kde4/HISTORY
@@ -1,3 +1,6 @@
+2008-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* KDE_DEPENDS: add "sub_depends qt4 QT3"
+
 2007-12-29 Treeve Jelbert <treeve@sourcemage.org>
 	* KDE_DEPENDS: add libxtst for kdelibs4
 
