xfce: renamed to xfce3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-10 Arjan Bouter <abouter@sourcemage.org>
+	* windowmanagers/xfce: moved to xfce3
+	* windowmanagers/xfce: added to assist in the renaming
+
 2008-01-09 Vlad Glagolev <stealth@sourcemage.org>
 	* FUNCTIONS: `nitpick' for default_build_perl function
 
