--- a/windowmanagers/xfce3/HISTORY
+++ b/windowmanagers/xfce3/HISTORY
@@ -1,7 +1,7 @@
 2008-01-10 Arjan Bouter <abouter@sourcemage.org>
-	* DETAILS,DEPENDS,BUILD,INSTALL: prepared deprecation
-	* PRE_BUILD,TRIGGERS:added
-	* xfce.desktop,CONFIGURE: removed
+	* DETAILS: renamed spell to xfce3,
+	           to avoid conflict with the xfce section
+	* CONFLICTS: added
 
 2008-01-06 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS: made more deps optional, added audiofile arts and libxml2
