graphics-libs/rmagick: updated to 2.1.0

--- a/graphics-libs/rmagick/HISTORY
+++ b/graphics-libs/rmagick/HISTORY
@@ -1,4 +1,7 @@
 2007-12-28 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 2.1.0
+
+2007-12-28 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 2.0.0, changed SOURCE_DIRECTORY back
 
 2007-11-01 Pol Vinogradov <vin.public@gmail.com>
