--- a/gnome2-libs/vte/HISTORY
+++ b/gnome2-libs/vte/HISTORY
@@ -1,3 +1,6 @@
+2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.16.12
+
 2007-12-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.16.11
 
