--- a/x11-toolkits/gtk+2/HISTORY
+++ b/x11-toolkits/gtk+2/HISTORY
@@ -1,3 +1,7 @@
+2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 2.12.5
+
 2008-01-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[0], cleaned up,
 	  updated spell to 2.12.4
