devel/[lua, lua50, lua4]: moved to lua-forge, cleaned up

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel: => python-pypi (Package Index), like for perl and php,
 	  for more info see http://pypi.python.org/
+	* lua-forge: get the future started! (new section added for Lua stuff)
+	* devel/lua: moved to lua-forge
+	* devel/lua50: moved to lua-forge
+	* devel/lua4: moved to lua-forge
+	* lua-forge/cgilua: new spell, building seb scripts with Lua
+	* lua-forge/luasocket: new spell, networking support library for Lua
+	* lua-forge/bitlib: new spell, library for bitwise operations in Lua
+	* lua-forge/luaexpat: new spell, XML expat parsing for Lua
 
 2008-01-10 Arjan Bouter <abouter@sourcemage.org>
 	* windowmanagers/xfce: moved to xfce3
