--- a/lua-forge/lua4/HISTORY
+++ b/lua-forge/lua4/HISTORY
@@ -1,3 +1,8 @@
+2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* INSTALL: cleaned up, added $INSTALL_ROOT
+	* CONFLICTS: cleaned up, added `&&'
+
 2006-12-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* CONFLICTS: added lua50
 
@@ -19,4 +24,3 @@
 
 2004-09-10 Eric Sandall <sandalle@sourcemage.org>
 	* Added as some packages (uclient) need the old lua
-
