--- a/lua-forge/lua50/HISTORY
+++ b/lua-forge/lua50/HISTORY
@@ -12,7 +12,7 @@
 	* CONFLICTS: added lua
 
 2006-09-28 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
-	* DETAILS: patchelevl++
+	* DETAILS: patchelevel++
 	* DEPENDS: addded ncurses and readline
 	* INSTALL: install the .so
 	* PRE_BUILD: apply lua-5.1-dynlib.patch to build .so
