--- a/lua-forge/lua/HISTORY
+++ b/lua-forge/lua/HISTORY
@@ -12,7 +12,7 @@
 
 2006-09-28 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: patchelevel++
-	* DEPENDS: addded ncurses and readline
+	* DEPENDS: added ncurses and readline
 	* INSTALL: install the .so
 	* PRE_BUILD: apply lua-5.1-dynlib.patch to build .so
 	  proper MANDIRs, proper CFLAGS
