Revert "stupid typos!!!"
This reverts commit b5f6bb736afae213476f2dbb5691fd96663818ee.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@
 	* devel/lua: moved to lua-forge
 	* devel/lua50: moved to lua-forge
 	* devel/lua4: moved to lua-forge
-	* lua-forge/cgilua: new spell, building web scripts with Lua
+	* lua-forge/cgilua: new spell, building seb scripts with Lua
 	* lua-forge/luasocket: new spell, networking support library for Lua
 	* lua-forge/bitlib: new spell, library for bitwise operations in Lua
 	* lua-forge/luaexpat: new spell, XML expat parsing for Lua
