Revert "devel/[lua, lua50, lua4]: moved to lua-forge, cleaned up"
This reverts commit 2475c8c139a33f6dcaffd08bed2436734abc42dd.

--- a/devel/lua50/HISTORY
+++ b/devel/lua50/HISTORY
@@ -1,14 +1,10 @@
-2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
-	* BUILD, DEPENDS: cleaned up
-	* INSTALL: removed the dirty hacks
-	* PRE_BUILD: added a patch for the .so compilation
-	* CONFLICTS: cleaned up, added `&&'
-
-2007-04-03 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: updated to 5.1.2
-
 2006-12-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
-	* CONFLICTS: added lua50
+	* DETAILS: branched off from lua
+	* PRE_BUILD: minor fixes, minor fix
+	* BUILD: removed
+	* INSTALL: removed
+	* lua-5.1-dynlib.patch: removed
+	* CONFLICTS: added lua
 
 2006-09-28 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: patchelevl++
@@ -78,3 +74,4 @@
 2002-07-09 Julian v. Bock <julian@wongr.net>
 	* DETAILS: set version to 4.0.1; set SOURCE_DIRECTORY
 	  to $BUILD_DIRECTORY/$SPELL-$VERSION.
+
