lua: cleaned up, added a patch for the .so compilation, added `&&', removed the dirty hacks

--- a/devel/lua/HISTORY
+++ b/devel/lua/HISTORY
@@ -1,3 +1,9 @@
+2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD, DEPENDS: cleaned up
+	* INSTALL: removed the dirty hacks
+	* PRE_BUILD: added a patch for the .so compilation
+	* CONFLICTS: cleaned up, added `&&'
+
 2007-04-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: updated to 5.1.2
 
@@ -5,8 +11,8 @@
 	* CONFLICTS: added lua50
 
 2006-09-28 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
-	* DETAILS: patchelevl++
-	* DEPENDS: addded ncurses and readline
+	* DETAILS: patchelevel++
+	* DEPENDS: added ncurses and readline
 	* INSTALL: install the .so
 	* PRE_BUILD: apply lua-5.1-dynlib.patch to build .so
 	  proper MANDIRs, proper CFLAGS
@@ -72,4 +78,3 @@
 2002-07-09 Julian v. Bock <julian@wongr.net>
 	* DETAILS: set version to 4.0.1; set SOURCE_DIRECTORY
 	  to $BUILD_DIRECTORY/$SPELL-$VERSION.
-
