lua50: cleaned up

--- a/devel/lua50/HISTORY
+++ b/devel/lua50/HISTORY
@@ -1,3 +1,8 @@
+2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* PRE_BUILD: cleaned up, `sedit' => `sed -i'
+	* CONFLICTS: cleaned up, added `&&'
+
 2006-12-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: branched off from lua
 	* PRE_BUILD: minor fixes, minor fix
@@ -7,8 +12,8 @@
 	* CONFLICTS: added lua
 
 2006-09-28 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
-	* DETAILS: patchelevl++
-	* DEPENDS: addded ncurses and readline
+	* DETAILS: patchelevel++
+	* DEPENDS: added ncurses and readline
 	* INSTALL: install the .so
 	* PRE_BUILD: apply lua-5.1-dynlib.patch to build .so
 	  proper MANDIRs, proper CFLAGS
@@ -74,4 +79,3 @@
 2002-07-09 Julian v. Bock <julian@wongr.net>
 	* DETAILS: set version to 4.0.1; set SOURCE_DIRECTORY
 	  to $BUILD_DIRECTORY/$SPELL-$VERSION.
-
