--- a/libs/pcre/HISTORY
+++ b/libs/pcre/HISTORY
@@ -1,3 +1,8 @@
+2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
+	* updated spell to 7.5
+	* DETAILS, DEPENDS: cleaned up via [[...]] and removing
+	  useless whitespaces
+
 2007-09-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 7.4
 
