ruby-raa/acoc: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/acoc: moved to ruby-raa section
+	* utils/acoc: moved to ruby-raa section
+
 2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel: => python-pypi (Package Index), like for perl and php,
 	  for more info see http://pypi.python.org/
