ruby-raa/alexandria: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/alexandria: moved to ruby-raa section
+	* gnome2-apps/alexandria: moved to ruby-raa section
 	* ruby-raa/acoc: moved to ruby-raa section
 	* utils/acoc: moved to ruby-raa section
 
