--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/diakonos: moved to ruby-raa section
+	* editors/diakonos: moved to ruby-raa section
 	* ruby-raa/bdb: moved to ruby-raa section
 	* database/bdb: moved to ruby-raa section
 	* ruby-raa/alexandria: moved to ruby-raa section
