ruby-raa/event-loop: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/event-loop: moved to ruby-raa section
+	* libs/event-loop: moved to ruby-raa section
 	* ruby-raa/eruby: moved to ruby-raa section
 	* http/eruby: moved to ruby-raa section
 	* ruby-raa/emai: moved to ruby-raa section
