ruby-raa/gnome-art: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/gnome-art: moved to ruby-raa section
+	* gnome2-apps/gnome-art: moved to ruby-raa section
 	* ruby-raa/fxruby: moved to ruby-raa section
 	* x11-toolkits/fxruby: moved to ruby-raa section
 	* ruby-raa/event-loop: moved to ruby-raa section
