ruby-raa/imlib2-ruby: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/imlib2-ruby: moved to ruby-raa section
+	* e/imlib2-ruby: moved to ruby-raa section
 	* ruby-raa/gurgitate-mail: moved to ruby-raa section
 	* mail/gurgitate-mail: moved to ruby-raa section
 	* ruby-raa/gnome-art: moved to ruby-raa section
