--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/managesieve: moved to ruby-raa section
+	* mail/managesieve: moved to ruby-raa section
 	* ruby-raa/imlib2-ruby: moved to ruby-raa section
 	* e/imlib2-ruby: moved to ruby-raa section
 	* ruby-raa/gurgitate-mail: moved to ruby-raa section
