ruby-raa/mysql-ruby: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/mysql-ruby: moved to ruby-raa section
+	* database/mysql-ruby: moved to ruby-raa section
 	* ruby-raa/musicextras: moved to ruby-raa section
 	* audio-libs/musicextras: moved to ruby-raa section
 	* ruby-raa/managesieve: moved to ruby-raa section
