ruby-raa/racc: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/racc: moved to ruby-raa section
+	* devel/racc: moved to ruby-raa section
 	* ruby-raa/ncurses-ruby: moved to ruby-raa section
 	* libs/ncurses-ruby: moved to ruby-raa section
 	* ruby-raa/mysql-ruby: moved to ruby-raa section
