--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/rake: moved to ruby-raa section
+	* devel/rake: moved to ruby-raa section
 	* ruby-raa/raggle: moved to ruby-raa section
 	* news/raggle: moved to ruby-raa section
 	* ruby-raa/racc: moved to ruby-raa section
