--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/rbogl: moved to ruby-raa section
+	* graphics-libs/rbogl: moved to ruby-raa section
 	* ruby-raa/rbbr: moved to ruby-raa section
 	* devel/rbbr: moved to ruby-raa section
 	* ruby-raa/rake: moved to ruby-raa section
