--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-amazon: moved to ruby-raa section
+	* libs/ruby-amazon: moved to ruby-raa section
 	* ruby-raa/rmagick: moved to ruby-raa section
 	* graphics-libs/rmagick: moved to ruby-raa section
 	* ruby-raa/redact: moved to ruby-raa section
