ruby-raa/ruby-atk: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-atk: moved to ruby-raa section
+	* gnome2-libs/ruby-atk: moved to ruby-raa section
 	* ruby-raa/ruby-amazon: moved to ruby-raa section
 	* libs/ruby-amazon: moved to ruby-raa section
 	* ruby-raa/rmagick: moved to ruby-raa section
