--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-esmart: moved to ruby-raa section
+	* devel/ruby-esmart: moved to ruby-raa section
 	* ruby-raa/ruby-edje: moved to ruby-raa section
 	* devel/ruby-edje: moved to ruby-raa section
 	* ruby-raa/ruby-ecore: moved to ruby-raa section
