ruby-raa/ruby-gconf2: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-gconf2: moved to ruby-raa section
+	* gnome2-libs/ruby-gconf2: moved to ruby-raa section
 	* ruby-raa/ruby-fcgi: moved to ruby-raa section
 	* libs/ruby-fcgi: moved to ruby-raa section
 	* ruby-raa/ruby-esmart: moved to ruby-raa section
