ruby-raa/rubygems: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/rubygems: moved to ruby-raa section
+	* devel/rubygems: moved to ruby-raa section
 	* ruby-raa/ruby-gdkpixbuf2: moved to ruby-raa section
 	* x11-toolkits/ruby-gdkpixbuf2: moved to ruby-raa section
 	* ruby-raa/ruby-gconf2: moved to ruby-raa section
