--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-gnome2: moved to ruby-raa section
+	* gnome2-libs/ruby-gnome2: moved to ruby-raa section
 	* ruby-raa/ruby-glib2: moved to ruby-raa section
 	* gnome2-libs/ruby-glib2: moved to ruby-raa section
 	* ruby-raa/ruby-gettext: moved to ruby-raa section
