--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-gnomeprintui: moved to ruby-raa section
+	* gnome2-libs/ruby-gnomeprintui: moved to ruby-raa section
 	* ruby-raa/ruby-gnomeprint: moved to ruby-raa section
 	* gnome2-libs/ruby-gnomeprint: moved to ruby-raa section
 	* ruby-raa/ruby-gnomecanvas: moved to ruby-raa section
