--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-gstreamer: moved to ruby-raa section
+	* video-libs/ruby-gstreamer: moved to ruby-raa section
 	* ruby-raa/ruby-gnomevfs: moved to ruby-raa section
 	* gnome2-libs/ruby-gnomevfs: moved to ruby-raa section
 	* ruby-raa/ruby-gnomeprintui: moved to ruby-raa section
