--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-gtkglext: moved to ruby-raa section
+	* graphics-libs/ruby-gtkglext: moved to ruby-raa section
 	* ruby-raa/ruby-gtk2: moved to ruby-raa section
 	* x11-toolkits/ruby-gtk2: moved to ruby-raa section
 	* ruby-raa/ruby-gstreamer: moved to ruby-raa section
