ruby-raa/ruby-gtkhtml2: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-gtkhtml2: moved to ruby-raa section
+	* gnome2-libs/ruby-gtkhtml2: moved to ruby-raa section
 	* ruby-raa/ruby-gtkglext: moved to ruby-raa section
 	* graphics-libs/ruby-gtkglext: moved to ruby-raa section
 	* ruby-raa/ruby-gtk2: moved to ruby-raa section
