--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-interbase: moved to ruby-raa section
+	* database/ruby-interbase: moved to ruby-raa section
 	* ruby-raa/ruby-gtktrayicon: moved to ruby-raa section
 	* gnome2-libs/ruby-gtktrayicon: moved to ruby-raa section
 	* ruby-raa/ruby-gtksourceview: moved to ruby-raa section
