ruby-raa/ruby-panel-applet: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-panel-applet: moved to ruby-raa section
+	* gnome2-libs/ruby-panel-applet: moved to ruby-raa section
 	* ruby-raa/ruby-odbc: moved to ruby-raa section
 	* odbc-drivers/ruby-odbc: moved to ruby-raa section
 	* ruby-raa/ruby-mp3info: moved to ruby-raa section
