--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-rsvg: moved to ruby-raa section
+	* gnome2-libs/ruby-rsvg: moved to ruby-raa section
 	* ruby-raa/ruby-pango: moved to ruby-raa section
 	* gnome2-libs/ruby-pango: moved to ruby-raa section
 	* ruby-raa/ruby-panel-applet: moved to ruby-raa section
