ruby-raa/visecas: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/visecas: moved to ruby-raa section
+	* audio-creation/visecas: moved to ruby-raa section
 	* ruby-raa/sqlite3-ruby: moved to ruby-raa section
 	* database/sqlite3-ruby: moved to ruby-raa section
 	* ruby-raa/ruby-zoom: moved to ruby-raa section
