--- a/database/tokyocabinet/HISTORY
+++ b/database/tokyocabinet/HISTORY
@@ -1,3 +1,6 @@
+2008-01-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.8
+
 2008-01-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.7
 
