ChangeLog entry for lua-forge/luasqlite

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
 	* lua-forge/luasocket: new spell, networking support library for Lua
 	* lua-forge/bitlib: new spell, library for bitwise operations in Lua
 	* lua-forge/luaexpat: new spell, XML expat parsing for Lua
+	* lua-forge/luasqlite: new spell, Lua 5 binding for SQLite 3 DBs
 	* lua-forge/MAINTAINER: add myself as maintainer
 
 2008-01-10 Arjan Bouter <abouter@sourcemage.org>
