lua: small fix to install pkg-config data file for lua

--- a/lua-forge/lua/HISTORY
+++ b/lua-forge/lua/HISTORY
@@ -3,6 +3,7 @@
 	* INSTALL: removed the dirty hacks
 	* PRE_BUILD: added a patch for the .so compilation
 	* CONFLICTS: cleaned up, added `&&'
+	* INSTALL: install pkgconfig data file
 
 2007-04-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: updated to 5.1.2
