--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 	* lua-forge/bitlib: new spell, library for bitwise operations in Lua
 	* lua-forge/luaexpat: new spell, XML expat parsing for Lua
 	* lua-forge/luasqlite: new spell, Lua 5 binding for SQLite 3 DBs
+	* lua-forge/luafilesystem: new spell, File System Library for Lua
 	* lua-forge/MAINTAINER: add myself as maintainer
 
 2008-01-10 Arjan Bouter <abouter@sourcemage.org>
