--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* lua-forge/luacrypto: new spell, Lua frontend to OpenSSL (Puffy powah!)
+
 2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel: => python-pypi (Package Index), like for perl and php,
 	  for more info see http://pypi.python.org/
