e/e_module-efm_nav: new spell, E17 EFM Navigation Module

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-11 Ladislav Hagara <hgr@vabo.cz>
+	* e/e_module-efm_nav: new spell, E17 EFM Navigation Module
+
 2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
 	* lua-forge/luacrypto: new spell, Lua frontend to OpenSSL (Puffy powah!)
 
