--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-01-11 Ladislav Hagara <hgr@vabo.cz>
 	* e/e_module-efm_nav: new spell, E17 EFM Navigation Module
+	* e/e_module-efm_path: new spell, E17 EFM Path Module
 
 2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
 	* lua-forge/luacrypto: new spell, Lua frontend to OpenSSL (Puffy powah!)
