--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.1.9, new SOURCE_URL[0]
+
 2007-12-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.1.8
 
