--- a/gnome2-apps/gthumb2/HISTORY
+++ b/gnome2-apps/gthumb2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-10 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.10.8
+
 2007-10-17 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.10.7
 
