--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.75
+
 2007-12-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[1], updated spell to 2.74,
 	  use UPSTREAM_KEY
