pygpgme: new spell, Python module for working with OpenPGP

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 
 2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
 	* lua-forge/luacrypto: new spell, Lua frontend to OpenSSL (Puffy powah!)
+	* python-pypi/pygpgme: new spell, Python module for working with OpenPGP
 
 2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel: => python-pypi (Package Index), like for perl and php,
