pyopenssl: moved to python-pypi section (less code reuse!)

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 
 2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
 	* lua-forge/luacrypto: new spell, Lua frontend to OpenSSL (Puffy powah!)
+	* crypto/pyopenssl: moved to python-pypi section (less code reuse!)
 	* python-pypi/pygpgme: new spell, Python module for working with OpenPGP
 
 2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
