pyopenssl: cleaned up, corrected url, removed useless INSTALL/BUILD files, due to moving to python-pypi section

--- a/python-pypi/pyopenssl/HISTORY
+++ b/python-pypi/pyopenssl/HISTORY
@@ -1,3 +1,8 @@
+2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD, INSTALL: removed (useless, due to moving the spell to
+	  python-pypi section)
+	* DEPENDS, DETAILS: cleaned up
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
@@ -20,4 +25,3 @@
 	* DETAILS: version 0.5.1
 	* BUILD, DEPENDS: added
 	  spell created
-
