audacity: use normal make instead of make_single and make_normal

--- a/audio-creation/audacity/HISTORY
+++ b/audio-creation/audacity/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11 Arjan Bouter <abouter@sourcemage.org>
+	* BUILD: use normal make instead of make_single and make_normal
+
 2007-10-10 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* BUILD: Added INSTALL_ROOT, fixed the path for manpages
 
