--- a/perl-cpan/mime-base64/HISTORY
+++ b/perl-cpan/mime-base64/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: returned UPDATED
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: cleaned up, removed BUILD_API&&UPDATED
 	* BUILD: useless
