--- a/windowmanagers/icewm/HISTORY
+++ b/windowmanagers/icewm/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: stable version 1.2.35
+
 2008-01-03 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 1.2.34 and added testing version 1.3.2
 	* PREPARE: added testing version
