--- a/perl-cpan/uri/HISTORY
+++ b/perl-cpan/uri/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: returned UPDATED
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: removed UPDATED, fixed url, cleaned up
 	* BUILD: useless
