--- a/perl-cpan/lingua-ispell/HISTORY
+++ b/perl-cpan/lingua-ispell/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: retuned UPDATED
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: useless
 	* DETAILS: removed BUILD_API&&UPDATED
