--- a/crypto/gnupg/HISTORY
+++ b/crypto/gnupg/HISTORY
@@ -1,3 +1,7 @@
+2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* PREPARE: removed, it's useless really (for the last 3 years)
+	* DETAILS: removed GNUPG_DEVEL, -^, fixed url, removed useless quotes
+
 2007-12-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.8
 
