--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,3 +1,6 @@
+20008-01-11 Treeve Jelbert <treeve@sourcemage.org>
+	* SUB_DEPENDS: fix typo
+
 20008-01-09 Treeve Jelbert <treeve@sourcemage.org>
 	* SUB_DEPENDS, PRE_SUB_DEPENDS: add QT3
 
