--- a/video/transcode/HISTORY
+++ b/video/transcode/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DETAILS: updated to 1.0.5
+
 2007-09-16 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 1.0.4
 	* DEPENDS: removed gtk+ optional_depends
