--- a/kde4/kdelibs4/HISTORY
+++ b/kde4/kdelibs4/HISTORY
@@ -1,3 +1,7 @@
+2008-01-11  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.0
+	* PRE_BUILD, qt44.patch: deleted obsolete files
+
 2008-01-07 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* qt44.patch: appended a fix for phonon
 	* PRE_BUILD, qt44.patch: added patch from r745967 so it compiles with qt4.4
