--- a/perl-cpan/xml-sax/HISTORY
+++ b/perl-cpan/xml-sax/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD, INSTALL: fixed multijob build (this spell hates it)
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, BUILD: cleaned up	
 
