mp3-tag: fixed multijob build (this spell hates it)

--- a/perl-cpan/mp3-tag/HISTORY
+++ b/perl-cpan/mp3-tag/HISTORY
@@ -1,3 +1,8 @@
+2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: useful
+	* INSTALL: fixed multijob build (this spell hates it)
+	* DEPENDS: cleaned up
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: useless
 
@@ -39,4 +44,3 @@
 
 2002-09-14 Eric Womack <eric@lasvegasdata.com>
 	* All files: initial version
-
