--- a/kde4/kdegraphics4/HISTORY
+++ b/kde4/kdegraphics4/HISTORY
@@ -1,3 +1,6 @@
+2008-01-11  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.0
+
 2007-12-30  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add ghostscript -sub LIBS
 
