lv2core: New spell, the LV2 plugin standard core package.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-11 Juuso Alasuutari <iuso@sourcemage.org>
+	* audio-libs/lv2core: New spell, the LV2 plugin standard core package.
+
 2008-01-11 Ladislav Hagara <hgr@vabo.cz>
 	* e/e_module-efm_nav: new spell, E17 EFM Navigation Module
 	* e/e_module-efm_path: new spell, E17 EFM Path Module
