--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-01-11 Juuso Alasuutari <iuso@sourcemage.org>
 	* audio-libs/lv2core: New spell, the LV2 plugin standard core package.
+	* audio-libs/slv2: New spell, an LV2 host library.
 
 2008-01-11 Ladislav Hagara <hgr@vabo.cz>
 	* e/e_module-efm_nav: new spell, E17 EFM Navigation Module
