ftp/bittornado: new spell, a BitTorrent client, second try

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 	* audio-libs/lv2core: New spell, the LV2 plugin standard core package.
 	* audio-libs/slv2: New spell, an LV2 host library.
 
+2008-01-11 Martin Spitzbarth <m.spitzbarth@gmx.de>
+	* ftp/bittornado: new spell, a BitTorrent client
+
 2008-01-11 Ladislav Hagara <hgr@vabo.cz>
 	* e/e_module-efm_nav: new spell, E17 EFM Navigation Module
 	* e/e_module-efm_path: new spell, E17 EFM Path Module
