--- a/windowmanagers/icewm/HISTORY
+++ b/windowmanagers/icewm/HISTORY
@@ -5,6 +5,7 @@
 	* CONFIGURE: remove old presistant opts
 	* INSTALL: removed extra spaces
 	* DETAILS: patchlevel=1
+	* BUILD: use default_build
 
 2008-01-03 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 1.2.34 and added testing version 1.3.2
