--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,8 @@
+2008-01-11 Eric Sandall <sandalle@sourcemage.org>
+	* info/patches/smgl_patches/e1000e-2.6.23.patch: Added Intel PCI-E
+	  Gigabit NIC driver from Auke Kok (sofar in #lunar ;)) with a cleanup
+	  patch from Jeff Garzik
+
 2008-01-10 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: updated latest to patch-2.6.24-rc7
 	* info/patches/PRE_2_6/patch-2.6.24-rc7: added
