--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-12  Treeve Jelbert <treeve@sourcemage.org>
+	* kde4/dragonplayer: new spell, video player
+
 2008-01-11 Juuso Alasuutari <iuso@sourcemage.org>
 	* audio-libs/lv2core: New spell, the LV2 plugin standard core package.
 	* audio-libs/slv2: New spell, an LV2 host library.
