--- a/e/e16/HISTORY
+++ b/e/e16/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.16.8.11
+
 2007-10-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.16.8.10
 
