--- a/e/e16-themes/HISTORY
+++ b/e/e16-themes/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.16.8.0.2
+
 2007-11-29 linuxfan <demaillists@comcast.net>
 	* DEPENDS, DETAILS: spell created
 
