--- a/e/e16-docs/HISTORY
+++ b/e/e16-docs/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.16.8.0.1
+
 2007-02-16 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* CONFLICTS: removed, deprecation complete
 
