--- a/utils/syslinux/HISTORY
+++ b/utils/syslinux/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.60
+
 2007-12-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.54
 
