Spliting bashish spell on two clean spells one for bashish one for themes And updating bashish to version 2.0.7

--- a/shell-term-fm/bashish/HISTORY
+++ b/shell-term-fm/bashish/HISTORY
@@ -1,3 +1,7 @@
+2007-01-12 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
+	* DETAILS: Updated to version 2.0.7, deleting UPDATED
+	* BUILD,PRE_BUILD,INSTALL: Removed, no more needed
+
 2006-06-28 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Removed BUILD_API=2, set grimoire-wide
 
