--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/FUNCTIONS: added FUNCTIONS
+
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/visecas: moved to ruby-raa section
 	* audio-creation/visecas: moved to ruby-raa section
