--- a/ruby-raa/rmagick/HISTORY
+++ b/ruby-raa/rmagick/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD, INSTALL: removed handeld by default_ functions
+
 2007-12-28 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 2.0.0, changed SOURCE_DIRECTORY back
 
