acoc: minor fixups

--- a/ruby-raa/acoc/HISTORY
+++ b/ruby-raa/acoc/HISTORY
@@ -1,3 +1,9 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DEPENDS: added ruby-tpty
+	* BUILD: true
+	* INSTALL: use the supplied Makefile
+	* PRE_BUILD: fix config file location
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
