--- a/ruby-raa/diakonos/HISTORY
+++ b/ruby-raa/diakonos/HISTORY
@@ -1,3 +1,8 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: added DOCS
+	* BUILD: removed uses default_
+	* INSTALL: updated to use default
+
 2007-05-07 Pieter Lenaerts <e-type@sourcemage.org>
 	* DETAILS: added SOURCE2_IGNORE
 
