--- a/ruby-raa/diakonos/INSTALL
+++ b/ruby-raa/diakonos/INSTALL
@@ -1,7 +1,4 @@
-ruby setup.rb all \
-     --sysconfdir=/share/diakonos \
-     --prefix=${INSTALL_ROOT}/usr &&
-
+default_install  &&
 mkdir -p $INSTALL_ROOT/etc/profile.d/ &&
 if install_config_file  $SCRIPT_DIRECTORY/profile.d/editor.sh   \
                         $INSTALL_ROOT/etc/profile.d/editor.sh;  then
