ruby-raa/FUNCTIONS: minor fix

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/FUNCTIONS: added FUNCTIONS,
-	  added Makefile detection
+	  added Makefile detection, minor fix
 
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/visecas: moved to ruby-raa section
