wm-addons/alock: new spell, X session locker

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-12 Elisamuel Resto <ryuji@sourcemage.org>
+	* wm-addons/alock: new spell, X session locker
+
 2008-01-12  Treeve Jelbert <treeve@sourcemage.org>
 	* kde4/dragonplayer: new spell, video player
 
