lm_sensors: fixes branch persistence problem

--- a/kernels/lm_sensors/HISTORY
+++ b/kernels/lm_sensors/HISTORY
@@ -1,3 +1,7 @@
+2008-01-12 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* fixed non persistence of branch change in DETAILS (credits go to
+		ryuji and lynxlynxlynx).
+
 2007-12-09 Ladislav Hagara <hgr@vabo.cz>
 	* PREPARE, DETAILS, DEPENDS, BUILD, INSTALL: added possibility to choose
 	  between 2 and 3 branches (DEFAULT=2) [Bug 14157]
