--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/FUNCTIONS: added FUNCTIONS,
 	  added Makefile detection, minor fix
+	* FUNCTIONS: added default_build_configure and default_build_make,
+	  default_build_configure is now capable of taking SPELL_OPTS vars
+	  into OPTS so a few less BUILD files once this starts getting used
 
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/visecas: moved to ruby-raa section
