FUNCTIONS: alley_cat++ for getting this into pure bash

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@
 	  added Makefile detection, minor fix
 	* FUNCTIONS: added default_build_configure and default_build_make,
 	  default_build_configure is now capable of taking SPELL_OPTS vars
-	  into OPTS so a few less BUILD files once this starts getting used
+	  into OPTS so a few less BUILD files once this starts getting used,
+	  thanks to alley_cat it's all done in bash now no eval
 
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/visecas: moved to ruby-raa section
