--- a/ruby-raa/event-loop/HISTORY
+++ b/ruby-raa/event-loop/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD, INSTALL: removed now using default_
+
 2007-02-24 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: fixup lines and one tab, fixe up descriptions
 
