--- a/ruby-raa/gnome-art/HISTORY
+++ b/ruby-raa/gnome-art/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* INSTALL: uses setup.sh
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
