ruby-raa/FUNCTIONS: various fixups

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/FUNCTIONS: added FUNCTIONS,
-	  added Makefile detection, minor fix
+	  added Makefile detection, minor fix,
+	  fixups, don't pass --prefix to install it breaks stuff
 	* FUNCTIONS: added default_build_configure and default_build_make,
 	  default_build_configure is now capable of taking SPELL_OPTS vars
 	  into OPTS so a few less BUILD files once this starts getting used,
