mysql-ruby: removed BUILD

--- a/ruby-raa/mysql-ruby/HISTORY
+++ b/ruby-raa/mysql-ruby/HISTORY
@@ -1,3 +1,8 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD: don't you just LOVE all the wonderfull things
+	  sorcery can do, removed
+	* DEPENDS: added stuff here
+
 2007-04-01 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.7.3
 
