fxruby: remove BUILD, INSTALL

--- a/ruby-raa/fxruby/HISTORY
+++ b/ruby-raa/fxruby/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD,INSTALL: now using default_
+
 2007-04-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.11
 
