--- a/ruby-raa/bdb/HISTORY
+++ b/ruby-raa/bdb/HISTORY
@@ -1,3 +1,7 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD: removed
+	* DETAILS: update to 0.6.2, 4.6 sync
+
 2007-03-31 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: version 0.6.0 needed to build aginst db 4.5
 
