--- a/ruby-raa/raggle/HISTORY
+++ b/ruby-raa/raggle/HISTORY
@@ -1,3 +1,7 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD: removed
+	* PRE_BUILD: added
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
