--- a/ruby-raa/alexandria/HISTORY
+++ b/ruby-raa/alexandria/HISTORY
@@ -1,2 +1,5 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD,INSTALL: using default_ functions now
+
 2007-11-03  Cathal Mc Ginley <cathal.magus@gnostai.org>
 	* DEPENDS, BUILD, INSTALL, DETAILS: created this spell
