--- a/ruby-raa/rbogl/HISTORY
+++ b/ruby-raa/rbogl/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD: removed
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
