--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-evas: moved to ruby-raa section
+	* devel/ruby-evas: moved to ruby-raa section
 	* ruby-raa/FUNCTIONS: added FUNCTIONS,
 	  added Makefile detection, minor fix,
 	  fixups, don't pass --prefix to install it breaks stuff
