ruby-raa/ruby-eet: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-eet: moved to ruby-raa section
+	* devel/ruby-eet: moved to ruby-raa section
 	* ruby-raa/ruby-evas: moved to ruby-raa section
 	* devel/ruby-evas: moved to ruby-raa section
 	* ruby-raa/FUNCTIONS: added FUNCTIONS,
