--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated spell to 0.9.53
+
 2007-12-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.52
 
