--- a/ruby-raa/ruby-ecore/HISTORY
+++ b/ruby-raa/ruby-ecore/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD, INSTALL: removed
+
 2007-08-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: svn -> git, fixed WEB_SITE
 	* DEPENDS: subversion -> git
