--- a/ruby-raa/ruby-eet/HISTORY
+++ b/ruby-raa/ruby-eet/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD,INSTALL: removed
+
 2007-03-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.1.4
 
