--- a/ruby-raa/euphoria/HISTORY
+++ b/ruby-raa/euphoria/HISTORY
@@ -1,3 +1,7 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD: removed
+	* PRE_BUILD: added
+
 2007-08-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: new SOURCE_URL, cvs -> git
 	* DEPENDS: CVS -> git
