--- a/ruby-raa/ruby-glib2/HISTORY
+++ b/ruby-raa/ruby-glib2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž 'ruskie' Levstik <ruskie@mages.ath.cx>
+	* BUILD: use default_build
+
 2007-12-01 Eric Sandall <sandalle@sourcemage.org>
 	* 01-timeout_add_seconds.patch: Patch between 1.10 and 1.13 from
 	  Revision 1.12 from http://ruby-gnome2.cvs.sourceforge.net/ruby-gnome2/ruby-gnome2/glib/src/rbglib_maincontext.c?view=log
