--- a/ruby-raa/ruby-gtktrayicon/HISTORY
+++ b/ruby-raa/ruby-gtktrayicon/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž 'ruskie' Levstik <ruskie@mages.ath.cx>
+	* BUILD: use default_build
+
 2006-05-21 Robin Cook <rcook@wyrms.net>
 	* DETAILS: removed BUILD_API
 
