--- a/ruby-raa/ruby-libgda/HISTORY
+++ b/ruby-raa/ruby-libgda/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž 'ruskie' Levstik <ruskie@mages.ath.cx>
+	* BUILD: use default_build
+
 2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
 	* DETAILS: (automated) Add KEYWORDS
 
