--- a/ruby-raa/ruby-gtktrayicon/HISTORY
+++ b/ruby-raa/ruby-gtktrayicon/HISTORY
@@ -1,5 +1,5 @@
 2008-01-12 Andraž 'ruskie' Levstik <ruskie@mages.ath.cx>
-	* BUILD: use default_build
+	* BUILD: use default_build, correcton removed
 
 2006-05-21 Robin Cook <rcook@wyrms.net>
 	* DETAILS: removed BUILD_API
