--- a/ruby-raa/rubygems/HISTORY
+++ b/ruby-raa/rubygems/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* INSTALL: removed
+
 2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.1
 
