--- a/ruby-raa/visecas/HISTORY
+++ b/ruby-raa/visecas/HISTORY
@@ -1,3 +1,7 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: build api2
+	* BUILD: removed handeld by default functions
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
