--- a/ruby-raa/ruby-interbase/HISTORY
+++ b/ruby-raa/ruby-interbase/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD: removed
+
 2006-07-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.07
 	* BUILD, DEPENDS: added
