ruby-raa/ruby-tpty: new spell, a ruby pty handling library

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@
 	  default_build_configure is now capable of taking SPELL_OPTS vars
 	  into OPTS so a few less BUILD files once this starts getting used,
 	  thanks to alley_cat it's all done in bash now no eval
+	* ruby-raa/ruby-tpty: new spell, a pty ruby library
 
 2008-01-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/visecas: moved to ruby-raa section
