--- a/http/kazehakase/HISTORY
+++ b/http/kazehakase/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 0.5.1
+
 2007-12-30 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DEPENDS: added xml-parser-expat
 
