ruby: moved to ruby-raa section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-13 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* devel/ruby: moved to ruby-raa section
+	* ruby-raa/ruby: moved to ruby-raa section
+
 2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/euphoria: moved to ruby-raa section
 	* e/euphoria: moved to ruby-raa section
