koffice - update depends

--- a/kde-apps/koffice/HISTORY
+++ b/kde-apps/koffice/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: rmeove unneeded kdebase
+
 2007-11-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: SECURITY_PATCH++
 	* PRE_BUILD: apply patch 
