--- a/crypto/encfs/HISTORY
+++ b/crypto/encfs/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.4.1, new SOURCE_URL[0]
+
 2008-01-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.0, tgz -> tar.gz, new WEB_SITE and SOURCE_URL[0]
 
