--- a/telephony/libtelepathy/HISTORY
+++ b/telephony/libtelepathy/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.3.1
+
 2007-10-02 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.2.0
 
