--- a/gnome2-libs/gnome-session/HISTORY
+++ b/gnome2-libs/gnome-session/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Robin Cook <rcook@wyrms.net>
+	* PREPARE: removed as now sub-depends
+	* DEPENDS: added subdepends on gtk+2 for gconf2
+
 2007-11-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.2
 
