--- a/gnome2-libs/gconf2/HISTORY
+++ b/gnome2-libs/gconf2/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Robin Cook <rcook@wyrms.net>
+	* PRE_SUB_DEPENDS: added
+	* SUB_DEPENDS: added 
+
 2007-10-16 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.1
 
