gnome2-apps/blogtk: new spell, a Python/GTK2 blog client

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-13 Elisamuel Resto <ryuji@sourcemage.org>
+	* gnome2-apps/blogtk: new spell, a Python/GTK blog client
+
 2008-01-13 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* devel/ruby: moved to ruby-raa section
 	* ruby-raa/ruby: moved to ruby-raa section
