--- a/ftp/deluge/HISTORY
+++ b/ftp/deluge/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Elisamuel Resto <ryuji@sourcemage.org>
+	* DEPENDS: added dependency on librsvg2 (Bug #14216)
+
 2007-12-24 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: version update to 0.5.7.95
 
