--- a/ftp/deluge/HISTORY
+++ b/ftp/deluge/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Elisamuel Resto <ryuji@sourcemage.org>
+	* DEPENDS: added dependency on librsvg2 (Bug #14216)
+
 2008-01-05 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
 	* DETAILS: version update to 0.5.8
 
