--- a/python-pypi/adns-python/HISTORY
+++ b/python-pypi/adns-python/HISTORY
@@ -1,3 +1,8 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: updated to 1.2.1, fixed url, website,
+	  project moved to googlecode
+
 2006-11-08 Flavien Bridault <vlaaad@sourcemage.org>
 	* TRIGGERS: Removed, python upgrades are now handled in the python spell
 
@@ -33,4 +38,3 @@
 
 2003-02-20 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* Created this spell
-
