--- a/python-pypi/buildbot/HISTORY
+++ b/python-pypi/buildbot/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: cleaned up, updated to 0.7.6, hash => gpg,
+	  removed FRESHMEAT_URL, UPDATED
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
