bzrk: spell deprecated, this is a part of BzrGtk now

--- a/python-pypi/bzrk/HISTORY
+++ b/python-pypi/bzrk/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: spell deprecated, this is a part of BzrGtk now
+	* DEPENDS: cleaned up
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
@@ -18,4 +22,3 @@
 
 2005-10-18 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS,DEPENDS,BUILD,INSTALL: Created
-
