--- a/python-pypi/bzrtools/HISTORY
+++ b/python-pypi/bzrtools/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: updated to 1.1.0
+
 2007-10-24 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: updated spell to 0.91.0 #14045
 	  fixed WEB_SITE, SOURCE_DIRECTORY
@@ -31,4 +35,3 @@
 2005-10-18 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS,DEPENDS,BUILD,INSTALL: Created
 	  Fixed WEB_SITE to point to http://bazaar.canonical.com/BzrTools
-
