--- a/python-pypi/cddb-py/HISTORY
+++ b/python-pypi/cddb-py/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
@@ -40,4 +43,3 @@
 
 2002-07-18 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* Created this spell.
-
