--- a/python-pypi/celementtree/HISTORY
+++ b/python-pypi/celementtree/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: spell deprecated (it's now a part of python >=2.5)
+
 2007-07-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: remove elementtree, add python and setuptools
 
@@ -22,4 +25,3 @@
 
 2005-06-08 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD,DEPENDS,DETAILS,INSTALL: Created
-
