cheetah: cleaned up

--- a/python-pypi/cheetah/HISTORY
+++ b/python-pypi/cheetah/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: cleaned up, removed useless comments
+
 2008-01-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.1
 
@@ -73,4 +77,3 @@
 
 2002-11-30 Richard Johns <johnsr1@lincoln.ac.nz>
 	* Created Spell
-
