clientcookie: spell deprecated, now a part of mechanize

--- a/python-pypi/clientcookie/HISTORY
+++ b/python-pypi/clientcookie/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: spell deprecated, now a part of mechanize
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
@@ -39,4 +42,3 @@
 
 2003-04-19 Pierre Abbat <phma@webjockey.net>
 	* Wrote this spell.
-
