dabo: cleaned up, added missed deps

--- a/python-pypi/dabo/HISTORY
+++ b/python-pypi/dabo/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up, added python as a req dep
+	* DETAILS: cleaned up
+
 2007-12-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: remove pysqlite, now part of python
 
@@ -71,4 +75,3 @@
 	* DETAILS: version 0.3.1
 	* BUILD, DEPENDS: added
 	spell created
-
