--- a/python-pypi/dnspython/HISTORY
+++ b/python-pypi/dnspython/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: updated to 1.6.0, cleaned up, sha1 => gpg, fixed url
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
@@ -26,4 +30,3 @@
 
 2003-06-17 Sergey Lipnevich <sergey@sourcemage.org>
 	* Spell created.
-
