driconf: cleaned up

--- a/python-pypi/driconf/HISTORY
+++ b/python-pypi/driconf/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: cleaned up
+
 2007-11-11 Vlad Glagolev <stealth@sourcemage.org>
 	* PREPARE: xorg-modular check
 	* PRE_BUILD: fixed $INSTALL_ROOT
