--- a/python-pypi/egenix-mx-base/HISTORY
+++ b/python-pypi/egenix-mx-base/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: cleaned up, word wrapped
+
 2007-06-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0.0
 	  new url
@@ -56,4 +60,3 @@
 
 2002-11-11 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* Created this spell
-
