elementtree: spell deprecated (a part of python since >=2.5)

--- a/python-pypi/elementtree/HISTORY
+++ b/python-pypi/elementtree/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: spell deprecated (a part of python since >=2.5)
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
@@ -16,4 +19,3 @@
 
 2005-06-08 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD,DEPENDS,DETAILS,INSTALL: Created
-
