--- a/python-pypi/elixir/HISTORY
+++ b/python-pypi/elixir/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS, DETAILS: cleaned up
+
 2007-12-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.5.0
 
@@ -7,4 +10,3 @@
 2007-09-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.3.0
 	  spell created
-
