--- a/python-pypi/faces/HISTORY
+++ b/python-pypi/faces/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added wxpython as opt dep
+	* DETAILS: updated to 0.11.7, cleaned up
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
