--- a/python-pypi/feedparser/HISTORY
+++ b/python-pypi/feedparser/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated to 4.1, cleaned up, fixed the spaces, added 2nd url
+	* PRE_BUILD: used to unpack the sources
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
