upstart: new spell, init replecement. 	 it's work in progress and can be installed alongside other init 	 systems for now (binaries are prefixed).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-13 Arjan Bouter <abouter@sourcemage.org>
+	* smgl/upstart: alternative init system
+
 2008-01-13 Elisamuel Resto <ryuji@sourcemage.org>
 	* gnome2-apps/blogtk: new spell, a Python/GTK blog client
 
