fnorb: cleaned up, added INSTALL_ROOT fixes, fixed broken urls

--- a/python-pypi/fnorb/INSTALL
+++ b/python-pypi/fnorb/INSTALL
@@ -1,7 +1,6 @@
-python  setup.py  install  &&
+default_install &&
 
-if  [  "$FNORB_DOCS"  =  "y"  ];  then
-  mkdir  -p  /usr/doc/$SPELL             &&
-  cp  -r  $SOURCE_DIRECTORY/Fnorb-Guide  \
-          /usr/doc/$SPELL
+if [[ $FNORB_DOCS == y ]]; then
+  mkdir -p $INSTALL_ROOT/usr/share/doc/fnorb &&
+  cp -av $SOURCE_DIRECTORY/Fnorb-Guide $INSTALL_ROOT/usr/share/doc/fnorb
 fi
