--- a/python-pypi/fnorb/HISTORY
+++ b/python-pypi/fnorb/HISTORY
@@ -1,3 +1,8 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: fixed url2, cleaned up
+	* CONFIGURE, DEPENDS, PRE_BUILD: cleaned up
+	* INSTALL: fixed INSTALL_ROOT
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
@@ -38,4 +43,3 @@
 	  Just copy the already uncompressed Fnorb-Guide to /usr/doc/$SPELL
 	* CONFIGURE: Converted to config_query
 	* PRE_BUILD: Added to unpack SOURCE2 in the beginning
-
