--- a/python-pypi/formencode/HISTORY
+++ b/python-pypi/formencode/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added python as a req dep
+	* DETAILS: updated to 0.9, cleaned up, fixed LICENSE
+
 2007-06-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.1
 
