--- a/python-pypi/fpconst/HISTORY
+++ b/python-pypi/fpconst/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: cleaned up, fixed SOURCE_URL
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
