--- a/python-pypi/fxpy/HISTORY
+++ b/python-pypi/fxpy/HISTORY
@@ -1,3 +1,9 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* BUILD: useless due to the new build system in section
+	* DETAILS: cleaned up
+	* PRE_BUILD: /usr/local => /usr
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
@@ -35,4 +41,3 @@
 
 2002-08-29 Treeve Jelbert <treeve@sourcemage.org>
 	* spell created
-
