gannotate: spell deprecated (part of bzr-gtk now)

--- a/python-pypi/gannotate/HISTORY
+++ b/python-pypi/gannotate/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: spell deprecated (part of bzr-gtk now)
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
@@ -15,4 +18,3 @@
 
 2005-10-30 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS,DEPENDS,BUILD,INSTALL: Created
-
